--- a/support.html
+++ b/support.html
@@ -62,7 +62,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
             <li><a href="contact.html">Contact</a></li>
