--- a/contact.html
+++ b/contact.html
@@ -3,58 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laboratory Test Result Analysis</title>
-    <style>
-        /* CSS styles for the page */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-        nav {
-            background-color: #444;
-            padding: 10px;
-        }
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-        nav ul li a {
-            color: #ffffff;
-            text-decoration: none;
-        }
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            padding: 20px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        
-    </style>
+    <title>Contact - Laboratory Test Result Analysis</title>
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/fade-in-animation.css">
 </head>
 <body>
     <header>
@@ -62,14 +14,20 @@
     </header>
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-
+    <div class="container fade-in-image">
+        <h2>Contact Us</h2>
+        <p>If you have any inquiries or feedback, please don't hesitate to reach out to us:</p>
+        <ul>
+            <li>Email: contact@example.com</li>
+            <li>Phone: +1-123-456-7890</li>
+            <li>Address: 123 Main Street, City, Country</li>
+        </ul>
     </div>
     <footer>
         <p>&copy; 2024 Laboratory Test Result Analysis</p>
